Add a quick test build option to avoid the super long FTI tests which are really full integration tests more than unit tests